PT-8068: Fix padding of the collapsed main menu (#2514)
* fix: Fix padding of the collapsed main menu
* fix: Center menu items when collapsed
* fix: Fix collapsed menu
* fix: Fix centering logo on collapse

--- a/src/VirtoCommerce.Platform.Web/wwwroot/css/themes/main/sass/modules/_menu.sass
+++ b/src/VirtoCommerce.Platform.Web/wwwroot/css/themes/main/sass/modules/_menu.sass
@@ -21,6 +21,7 @@
           padding: 10px $listItemHorizontalPadding 10px $listItemHorizontalPadding
         .list-ico
           margin: 0
+          width: 100%
         .list-name
           display: none
         .list-count
@@ -37,6 +38,8 @@
     &__img
       margin: 13px
       max-height: 34px
+    &__img--collapsed
+      width: 100%
     &-version
       color: #838d9a;
       font-size: 10px;
